# sykire

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  workspace.toml
.github/workflows/: bumpversion.yml
bases/sykire/example_base/: __init__.py
bases/sykire/uncovered/: __init__.py  core.py
components/sykire/my_comp/: __init__.py  core.py
documentation/: index.tldr
projects/example-project/: pyproject.toml
test/bases/sykire/example-base/: test_core.py
test/components/sykire/test_my_comp/: test_some_test.py
