[tool.poetry]
name = "sykire"
version = "0.1.0"
description = ""
authors = ["Rodrigo Carranza (sykire)"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
pytest = "^8.2.2"

[tool.isort]
profile = "black"

[tool.pyright]
extraPaths = ["bases", "components"]

[tool.pytest.ini_options]
addopts = "-vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
