[tool.poetry]
name = "sykire"
version = "0.0.2"
description = ""
authors = ["Rodrigo Carranza (sykire)"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pyright = "^1.1.380"
ruff = "^0.6.4"
bandit = "^1.7.9"

[tool.isort]
profile = "black"

[tool.pyright]
extraPaths = ["bases", "components"]

[tool.pytest.ini_options]
addopts = "-vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "poetry"
