[project]
name = "sykire"
version = "0.0.2"
description = ""
authors = [{ name = "Rodrigo Carranza (sykire)" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "asyncstdlib>=3.12.5",
    "cachetools>=5.5.0",
    "more-itertools>=10.5.0",
    "result>=0.17.0",
    "typer == 0.12.5",
]
requires-python = ">=3.13"

[project.scripts]
call = "sykire.my_comp.core:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.pyright]
extraPaths = ["bases", "components", "development"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=components/sykire --cov=bases/sykire --cov=projects --cov-report term-missing -vv"
pythonpath = ["bases", "components", "projects"]

[tool.commitizen]
version_provider = "pep621"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "nox[uv]>=2024.4.15",
    "polylith-cli>=1.17.0",
    "pyright>=1.1.381",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.6",
]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.hatch.build.targets.wheel]
packages = ["bases/*", "components/*"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.polylith.bricks]
"bases/sykire/uncovered" = "sykire/uncovered"
"components/sykire/my_comp" = "sykire/my_comp"
